[gd_scene load_steps=2 format=3 uid="uid://bjk7s4x8ygpwm"]

[ext_resource type="Script" path="res://algorithms/primitives/arrays_grid_understanding/ArraysGridUnderstanding.gd" id="1"]

[node name="ArraysGridUnderstanding" type="Node3D"]
script = ExtResource("1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 15)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 10, 0)
light_energy = 1.0
shadow_enabled = true

[node name="ArrayVisualization" type="Node3D" parent="."]

[node name="OneDimensionalArray" type="Node3D" parent="ArrayVisualization"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)

[node name="TwoDimensionalGrid" type="Node3D" parent="ArrayVisualization"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="ThreeDimensionalGrid" type="Node3D" parent="ArrayVisualization"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="DataManipulation" type="Node3D" parent="."]

[node name="InsertionDemo" type="Node3D" parent="DataManipulation"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 4, 0)

[node name="DeletionDemo" type="Node3D" parent="DataManipulation"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)

[node name="SearchDemo" type="Node3D" parent="DataManipulation"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 4, 0)

[node name="IndexingVisualization" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0)

[node name="AccessPatterns" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0)

